Fix heading position and negative space to right side on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,14 @@
 /*Import from Google Font*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&family=Roboto:wght@100;300;400;500;700&display=swap');
 
+/*code for unwanted negative space to right, horizontalscroll*/
+html,body {
+    margin:0;
+    padding:0;
+    overflow-x:hidden;
+    width: 100%
+    }
+
 /*Code obtained from https://stackoverflow.com/questions/61450202/div-background-image-isnt-showing*/
 /*Code was tweeked so that the content will flow from top to bottom*/
 .bg-image {
@@ -76,7 +84,7 @@ h6 {
     text-transform: uppercase;
 }
 
-/*Code for the Rita Jessa in the navbar*/
+
 .gen-heading {
     letter-spacing: 10px;
     font-weight: 700;
@@ -141,7 +149,8 @@ header {
     text-align: center;
 }
 
-/*pseudoclass code obtained in https://css-tricks.com/remember-selectors-with-love-and-hate*/
+
+/*Hover effect on navbar link*/
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link:active,
 .navbar-light .navbar-nav .nav-link:active:focus {
@@ -149,6 +158,7 @@ header {
     text-align: center;
     font-size: 20px;
 }
+
 
 .navbar-toggler {
     margin-right: 20px;
@@ -217,6 +227,7 @@ footer .btn {
 }
 
 /*--------------------------------------------------------------------------- Music*/
+
 
 /*object-fit and object-position for proper aligntment obtained from https://css-tricks.com/on-object-fit-and-object-position/*/
 img {
@@ -308,7 +319,6 @@ form .btn {
 
 @media only screen and (max-width: 992px) {
 
-
     img {
         display: none;
     }
@@ -359,7 +369,7 @@ form .btn {
         display: block;
     }
 
-    /*responsive audio width obtained from https://stackoverflow.com/questions/5635365/html-5-audio-tag-width*/
+ 
     audio {
         width: 10em;
     }
@@ -417,3 +427,5 @@ form .btn {
     }
 
 }
+
+
